Cleaning up some css and spacing issues. Site is looking much better

--- a/css/nivo-slider.css
+++ b/css/nivo-slider.css
@@ -10,9 +10,10 @@
 /* The Nivo Slider styles */
 .nivoSlider {
 	position:relative;
-	width:100%;
+	width:75%;
 	height:auto;
 	overflow: hidden;
+	margin: 0 auto;
 }
 .nivoSlider img {
 	position:absolute;
@@ -93,6 +94,17 @@
 	top:45%;
 	z-index:9;
 	cursor:pointer;
+	display:block;
+	width:30px;
+	height:30px;
+	background:url(../files/icons/arrows.png) no-repeat;
+	text-indent:-9999px;
+	border:0;
+	opacity: 0;
+	-webkit-transition: all 200ms ease-in-out;
+    -moz-transition: all 200ms ease-in-out;
+    -o-transition: all 200ms ease-in-out;
+    transition: all 200ms ease-in-out;
 }
 .nivo-prevNav {
 	left:0px;
@@ -104,9 +116,18 @@
 .nivo-controlNav {
 	text-align:center;
 	padding: 15px 0;
+	width: 75%;
+	margin: 0 auto;
 }
 .nivo-controlNav a {
 	cursor:pointer;
+	display:inline-block;
+	width:22px;
+	height:22px;
+	background:url(../files/icons/bullets.png) no-repeat;
+	text-indent:-9999px;
+	border:0;
+	margin: 0 2px;
 }
 .nivo-controlNav a.active {
 	font-weight:bold;
