--- a/css/people.css
+++ b/css/people.css
@@ -7,7 +7,7 @@
 }
 
 .header-boxed-secondary { 
-	margin: 100px -15px 30px;
+	margin: 50px -15px 30px;
 	background: rgba(136,154,178,0.1);
 	box-shadow: 2px 2px 0px rgba(136,154,178,0.4);
 	border-radius: 4px;
@@ -24,7 +24,7 @@
 	box-shadow: 0px 1px 0px #ddd;
 	text-align: left;
 	vertical-align: top;
-	width: 280px;
+	width: 325px;
 }
 
 .person-panel.alumni {
@@ -72,13 +72,13 @@
 .person-role {
 	display: block;
 	color: #888;
-	font-size: 0.7em;
+	font-size: 0.8em;
 }
 
 .other-person-role {
 	display: block;
 	color: #888;
-	font-size: 0.7em;
+	font-size: 0.8em;
 }
 
 .person-years {
