--- a/css/themes/default/default.css
+++ b/css/themes/default/default.css
@@ -35,8 +35,8 @@ Supports Thumbs: true
 	display:inline-block;
 	width:22px;
 	height:22px;
-	background:url(bullets.png) no-repeat;
-	text-indent:-9999px;
+	background:url(../files/icons/bullets.png) no-repeat;
+	/*text-indent:-9999px;*/
 	border:0;
 	margin: 0 2px;
 }
@@ -48,7 +48,7 @@ Supports Thumbs: true
 	display:block;
 	width:30px;
 	height:30px;
-	background:url(arrows.png) no-repeat;
+	background:url(../files/icons/arrows.png) no-repeat;
 	text-indent:-9999px;
 	border:0;
 	opacity: 0;
